# dynamic-batcher

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README copy.rst  README.md  README.rst  build-sphinx.sh  pyproject.toml  pytest.ini  requirements-test.txt
docs/: IDEATION.md
docs/source/: conf.py  dynamic_batcher.batcher.rst  dynamic_batcher.logger.rst  dynamic_batcher.redis_engine.rst  dynamic_batcher.rst  dynamic_batcher.types.rst  dynamic_batcher.validate.rst  examples-command-line-interface.rst  examples-getting_started.rst  examples-quickstart.rst  examples.rst  index.rst  modules.rst
dynamic_batcher/: __init__.py  __main__.py  batcher.py  logger.py  redis_engine.py  types.py  validate.py
e2e/: test_redis.py
e2e/app/: gunicorn_conf.py  logging.conf  main.py
e2e/batcher/: logging.conf  run.py
e2e/locust/: locustfile.py
test/: locustfile.py  main.py  test_batcher.py  test_redis.py  test_redis_engine.py
test/app/: main.py
test/ipynb/: example_redis_stream.ipynb
test/locust/: locustfile.py
